--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "core-js": "3.6.5",
     "element-ui": "2.15.8",
     "mavon-editor": "^2.9.0",
+    "image-conversion": "^2.1.1",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
