--- a/package.json
+++ b/package.json
@@ -16,17 +16,18 @@
   "dependencies": {
     "axios": "0.18.1",
     "core-js": "3.6.5",
+    "dayjs": "^1.10.6",
+    "echarts": "^5.3.2",
     "element-ui": "2.15.8",
-    "mavon-editor": "^2.9.0",
     "image-conversion": "^2.1.1",
     "js-cookie": "2.2.0",
+    "mavon-editor": "^2.9.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
     "vue": "2.6.10",
     "vue-router": "3.0.6",
-    "vuex": "3.1.0",
-    "dayjs": "^1.10.6"
+    "vuex": "3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.4.4",
